--- a/dev/cda/dev.yaml
+++ b/dev/cda/dev.yaml
@@ -7,13 +7,13 @@ service:
 
 ingress:
   enabled: true
+  domainName: cda.cda-dev.broadinstitute.org
   annotations:
     kubernetes.io/ingress.global-static-ip-name: cda-dev-ip
   hosts:
     - host: cda.cda-dev.broadinstitute.org
       paths:
         - /*
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+  tls:
+    - hosts:
+      - cda.cda-dev.broadinstitute.org
