--- a/dev/helmfile.yaml
+++ b/dev/helmfile.yaml
@@ -10,8 +10,9 @@ helmDefaults:
 releases:
   - name: cda   # release name
     namespace: dev   # target namespace
-    chart: cda-helm/cda   # chart name
-    version: 0.1.0
+#    chart: cda-helm/cda   # chart name
+    chart: ../../cda-helm/charts/cda   # chart name
+#    version: 0.1.0
     missingFileHandler: Warn
     values:
       - cda/dev.yaml
