--- a/dev/helmfile.yaml
+++ b/dev/helmfile.yaml
@@ -1,7 +1,7 @@
 ---
 repositories:
   - name: cda-helm
-    url: https://broadinstitute.github.io/cda-helm
+    url: https://cancerdataaggregator.github.io/cda-helm
 
 helmDefaults:
   createNamespace: true
@@ -11,7 +11,7 @@ releases:
   - name: cda   # release name
     namespace: dev   # target namespace
     chart: cda-helm/cda   # chart name
-    version: 0.1.1
+    version: 0.1.3
     missingFileHandler: Warn
     values:
       - cda/dev.yaml
