--- a/dev/cda/dev.yaml
+++ b/dev/cda/dev.yaml
@@ -17,3 +17,7 @@ ingress:
   tls:
     - hosts:
       - cda.cda-dev.broadinstitute.org
+
+serviceAccount:
+  annotations:
+    iam.gke.io/gcp-service-account: bq-cda-sa@broad-cda-dev.iam.gserviceaccount.com
