--- a/integration/helmfile.yaml
+++ b/integration/helmfile.yaml
@@ -9,9 +9,9 @@ helmDefaults:
 # helm releases to be deployed
 releases:
   - name: cda   # release name
-    namespace: integration   # target namespace
-    chart: cda-helm/cda-integration   # chart name
-    version: 0.1.7
+    namespace: dev  #target namespace
+    chart: cda-helm/cda   # chart name
+    version: 0.1.3
     missingFileHandler: Warn
     values:
       - cda/integration.yaml
