--- a/integration/cda/integration.yaml
+++ b/integration/cda/integration.yaml
@@ -19,4 +19,4 @@ ingress:
 
 serviceAccount:
   annotations:
-    iam.gke.io/gcp-service-account: cda-bq-service-user@broad-cda-dev.iam.gserviceaccount.com
+    iam.gke.io/gcp-service-account: bq-cda-sa@broad-cda-dev.iam.gserviceaccount.com
