--- a/integration/cda/integration.yaml
+++ b/integration/cda/integration.yaml
@@ -7,6 +7,8 @@ service:
   type: LoadBalancer
   port: 8080
 
+replicaCount: 3
+
 ingress:
   enabled: true
   domainName: staging.cda-dev.broadinstitute.org
