--- a/integration/cda/integration.yaml
+++ b/integration/cda/integration.yaml
@@ -1,7 +1,7 @@
 image:
   repository: gcr.io/broad-cda-dev/cda-integration
   pullPolicy: Always
-  tag: 2.0.0
+  tag: 2.0.2-SNAPSHOT
 
 service:
   type: LoadBalancer
