--- a/integration/cda/integration.yaml
+++ b/integration/cda/integration.yaml
@@ -1,7 +1,8 @@
 image:
-  repository: gcr.io/broad-cda-dev/cda-integration
+  repository: us.gcr.io/broad-cda-dev/cda-integration
   pullPolicy: Always
-  tag: 2.0.2-SNAPSHOT
+  tag: 2.0.8-SNAPSHOT
+
 
 service:
   type: LoadBalancer
