--- a/integration/cda/integration.yaml
+++ b/integration/cda/integration.yaml
@@ -1,8 +1,7 @@
 image:
   repository: us.gcr.io/broad-cda-dev/cda-integration
   pullPolicy: Always
-  tag: 2.0.8-SNAPSHOT
-
+  tag: 3.0.5-RC
 
 service:
   type: LoadBalancer
